--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ letter-spacing: -9px;
 <div id="container">
   <div id="mainContent">
     <h1>Christopher Troup</h1>
-    <p>Is a web developer.</p>
+    <p>Is a web application developer.</p>
 	</div>
 </div>
 </body>
