--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@ letter-spacing: -9px;
   <div id="mainContent">
     <h1>Christopher Troup</h1>
     <p>Is a web application developer.</p>
+    <p><a href="mailto:chris@norex.ca">chris@norex.ca</a><br />
+    <a href="http://www.norex.ca">http://www.norex.ca</a>
+    </p>
 	</div>
 </div>
 </body>
